packages/isar_generator/test/errors/class/constructor_wrong_parameter.dart
// constructor parameter type does not match property type

import 'package:isar/isar.dart';

@collection
class Model {
  Model();

  Id? id;

  String prop1 = '5';
}
